<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:showIn="@layout/activity_login"
        tools:context=".auth.LoginActivity">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="match_parent"
                    android:text="@string/label_parent_login"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:id="@+id/label_msg_title"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_input_username"
                    android:background="@drawable/square_edit_text"
                    android:layout_below="@id/label_msg_title"
                    android:padding="16dp"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/et_username"
                    android:layout_height="wrap_content" tools:ignore="Autofill"/>

            <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/hint_input_password"
                    android:layout_marginTop="16dp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent"
                    android:background="@drawable/square_edit_text"
                    android:layout_below="@id/et_username"
                    android:padding="16dp"
                    android:id="@+id/et_password"
                    android:layout_height="wrap_content" tools:ignore="Autofill"/>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/label_button_login"
                    android:padding="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/btn_login"
                    android:layout_below="@id/et_password"
                    android:layout_height="wrap_content"/>

            <TextView android:layout_width="match_parent"
                      android:text="@string/label_terms_and_conditions"
                      android:padding="5dp"
                      android:layout_marginTop="8dp"
                      android:textColor="@color/colorAccent"
                      android:gravity="center_horizontal"
                      android:layout_below="@id/btn_login"
                      android:layout_height="wrap_content"/>

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>