...
                     android:background="@drawable/bg_ripple_rectangle"
                     android:layout_height="wrap_content">

            <RelativeLayout android:layout_width="match_parent"
                            android:padding="16dp"
                            android:clickable="true"
                            android:id="@+id/btn_parent_role"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackground"
                            android:layout_height="wrap_content">

                <ImageView android:layout_width="wrap_content"
                           android:layout_centerHorizontal="true"
...
                     android:layout_marginBottom="15dp"
                     android:layout_height="wrap_content">

            <RelativeLayout android:layout_width="match_parent"
                            android:padding="8dp"
                            android:clickable="true"
                            android:id="@+id/btn_teacher_role"
                            android:focusable="true"
                            android:background="?attr/selectableItemBackground"
                            android:layout_height="wrap_content">

                <ImageView android:layout_width="wrap_content"
                           android:src="@drawable/teachers"
...
